Copy files from main to new-branch-name

--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
   <meta charset="UTF-8">
   <link rel="icon" href="data:,">
   <title>Rock, Paper, Scissors</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-
-    <script src="javascript.js">JS Script</script>
-
+  <div class="game-container">
+    <h1>Rock Paper Scissors</h1>
+    <div class="buttons">
+      <button id="rock">Rock</button>
+      <button id="paper">Paper</button>
+      <button id="scissors">Scissors</button>
+    </div>
+    <div id="results" class="results"></div>
+    <div id="score" class="score"></div>
+  </div>
+  <script src="javascript.js"></script>
 </body>
+</html>
